--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p>La red se encuentra pre-entrenada. Tiene 15 entradas, una capa oculta y 4 salidas.</p>
     <p>El entrenamiento se realizó con 9100 simulaciones en ATP para sobretensiones de frente lento por energización de líneas.</p>
     <p>Es posible seguir entrenando la red si se ingresan más simulaciones.</p>
-    <p>La red predice sobretensiones de maniobra según la norma IEC sin la necesidad de realizar simulaciones.</p>
+    <p>La red busca predecir sobretensiones de maniobra de forma más precisa que lo que indica la norma IEC.</p>
 </div>
 
 <div style="padding:0 16px;">
